# deckard

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile
src/: card.rs  cmp.rs  error.rs  lib.rs
src/card/: impls.rs  tests.rs
src/cmp/: impls.rs  tests.rs
